## report_generator.py

class ReportGenerator:
    """
    This class is responsible for generating reports based on the findings from various security tests.
    """

    def generate_report(self, findings: list) -> None:
        """
        Generates a report from the findings of the security tests.

        Args:
            findings (list): A list of dictionaries, each containing details about a specific vulnerability test.
        """
        report_content = self.format_report(findings)
        self.save_report(report_content)

    def format_report(self, findings: list) -> str:
        """
        Formats the findings into a human-readable report.

        Args:
            findings (list): A list of dictionaries with test results.

        Returns:
            str: A formatted string that represents the report.
        """
        report_lines = ["Security Test Report", "=" * 20, ""]
        for finding in findings:
            report_lines.append(f"URL: {finding['url']}")
            report_lines.append(f"Vulnerability: {finding['vulnerability']}")
            report_lines.append(f"Status: {finding['status']}")
            if finding['details']:
                report_lines.append(f"Details: {finding['details']}")
            report_lines.append("-" * 20)

        return "\n".join(report_lines)

    def save_report(self, report_content: str) -> None:
        """
        Saves the report content to a file with error handling.

        Args:
            report_content (str): The formatted report content to be saved.
        """
        filename = "security_report.txt"
        try:
            with open(filename, 'w') as file:
                file.write(report_content)
            print(f"Report saved to {filename}")
        except IOError as e:
            print(f"Failed to save report: {e}")
