
classDiagram
    class Main {
        +run() void
    }
    class SQLInjection {
        +test_injection(target_url: str) dict
    }
    class XSSExploit {
        +test_xss(target_url: str) dict
    }
    class AuthBypass {
        +test_auth(target_url: str) dict
    }
    class ReportGenerator {
        +generate_report(findings: list) void
    }
    Main --> SQLInjection
    Main --> XSSExploit
    Main --> AuthBypass
    Main --> ReportGenerator
